@@ -6,7 +6,7 @@
     <meta name='created' content='Sun, 06 Apr 2014 10:12:16 GMT'/>
     <meta name='creator' content='Holger Seelig'/>
     <meta name='generator' content='Titania V0.7.1, http://titania.create3000.de'/>
-    <meta name='modified' content='Sat, 02 Aug 2014 02:16:15 GMT'/>
+    <meta name='modified' content='Sat, 02 Aug 2014 03:25:22 GMT'/>
   </head>
   <Scene>
     <ExternProtoDeclare name='Rotor' url='"http://titania.create3000.de/Library/Prototypes/0.1/Engines/Rotor.x3dv"'>
@@ -111,6 +111,7 @@
       </ProtoBody>
     </ProtoDeclare>
     <NavigationInfo DEF='None'
+        headlight='false'
         transitionType='"ANIMATE"'/>
     <Background DEF='Sunset'
         skyAngle='0.8, 1.2, 1.5, 1.55, 1.5708'
@@ -118,8 +119,8 @@
         groundColor='0 0 0'/>
     <Viewpoint DEF='Viewpoint1'
         description='OutlineEditor'
-        position='-18.5708 9.05869 14.8554'
-        orientation='0.326861 0.93161 0.158951 5.40011'
+        position='-18.4103 18.6893 6.62416'
+        orientation='0.424037 0.837845 0.343814 5.02775'
         centerOfRotation='4.29495 -0.945555 -6.15488'/>
     <ProtoInstance name='Grid'>
       <fieldValue name='xDimension' value='40'/>
@@ -286,7 +287,7 @@
           <Material/>
         </Appearance>
         <Text DEF='Text2'
-            string='"modified...", "Sa 02 Aug 2014 03:55:46 CEST"'>
+            string='"modified...", "Sa 02 Aug 2014 05:08:19 CEST"'>
           <ScreenFontStyle
               family='"SANS"'
               style='BOLD'/>
@@ -452,7 +453,7 @@ function initialize ()
       <ProximitySensor USE='_9'/>
       <Transform DEF='Box'
           translation='1.40843 1.10727 0.193803'
-          rotation='0 0 1 5.24378'
+          rotation='0 0 1 4.53684'
           scale='0.2 0.2 0.2'>
         <Transform>
           <Shape>
@@ -477,11 +478,19 @@ function initialize ()
             size='1 1 1'/>
       </Shape>
     </Transform>
-    <Transform DEF='_10'
-        translation='-4.11327 2.22753 6.6934'>
-      <PointLight DEF='_11'
+    <Transform
+        translation='3.49909 3.57949 6.88583'>
+      <PointLight DEF='_10'
           color='0 1 1'
-          location='0 2 -10'/>
+          location='0 2 -10'
+          intensity='0.5'/>
+    </Transform>
+    <Transform
+        translation='0.0928667 5.09104 19.9731'>
+      <PointLight DEF='_11'
+          color='1 0 1'
+          location='0 2 -10'
+          intensity='0.5'/>
     </Transform>
     <IMPORT inlineDEF='_5' exportedDEF='CubeExport'/>
     <IMPORT inlineDEF='_6' exportedDEF='ExportedInline'/>
