@@ -1,3 +1,7 @@
+2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* OutlineTreeModel.cpp: 
+
 2014-08-01  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* MaterialEditor.h:
