@@ -1,5 +1,9 @@
 2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* LightTool.x3dv: 
+
+2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* libtitania-x3d.cproj:
 	* X3DConstants.h:
 	* LightTool.x3dv:
