@@ -1,5 +1,9 @@
 2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineEditor.x3d: 
+
+2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* PointLight.x3dv:
 	* OutlineEditor.x3d: 
